--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,15 @@
+# Unwanted Python stuff
+__pycache__
 *.py[cod]
 
 # Emacs working files
 *~
 
+# Vim working files
+*.swp
+
 # C extensions
 *.so
 
-# Packages
-*.egg
-*.egg-info
-dist
-build
-eggs
-parts
-bin
-var
-sdist
-develop-eggs
-.installed.cfg
-lib
-lib64
-__pycache__
-
-# Installer logs
-pip-log.txt
-
 # Unit test / coverage reports
-.coverage
-.tox
 nosetests.xml
-
-# Translations
-*.mo
-
-# Mr Developer
-.mr.developer.cfg
-.project
-.pydevproject
